[gd_scene load_steps=7 format=2]

[ext_resource path="res://scripts/CookingUI.gd" type="Script" id=1]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color(0.196078, 0.196078, 0.196078, 0.901961)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="Animation" id=2]
resource_name = "cooking"
length = 1.0
tracks/0/type = "value"
tracks/0/path = NodePath("CookingEffect:modulate")
tracks/0/interp = 1
tracks/0/loop = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray(0, 0.5, 1),
"transitions": PoolRealArray(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color(0.290196, 0.290196, 0.290196, 1)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color(0.141176, 0.141176, 0.141176, 1)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color(0.45098, 0.45098, 0.45098, 1)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[node name="CookingUI" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="Background" type="Panel" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -300
margin_top = -200
margin_right = 300
margin_bottom = 200
custom_styles/panel = SubResource( 1 )

[node name="Title" type="Label" parent="Background"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -100
margin_top = 10
margin_right = 100
margin_bottom = 30
text = "Cooking"
align = 1
valign = 1

[node name="RecipeList" type="ItemList" parent="Background"]
anchor_left = 0.05
anchor_top = 0.1
anchor_right = 0.45
anchor_bottom = 0.9
custom_styles/bg = SubResource( 3 )

[node name="IngredientList" type="ItemList" parent="Background"]
anchor_left = 0.5
anchor_top = 0.1
anchor_right = 0.95
anchor_bottom = 0.4
custom_styles/bg = SubResource( 3 )

[node name="RecipeInfo" type="TextEdit" parent="Background"]
anchor_left = 0.5
anchor_top = 0.45
anchor_right = 0.95
anchor_bottom = 0.75
custom_styles/normal = SubResource( 4 )
readonly = true
wrap_enabled = true

[node name="CookButton" type="Button" parent="Background"]
anchor_left = 0.5
anchor_top = 0.8
anchor_right = 0.95
anchor_bottom = 0.9
custom_styles/normal = SubResource( 5 )
text = "Cook!"
disabled = true

[node name="CloseButton" type="Button" parent="Background"]
anchor_left = 0.9
anchor_right = 0.98
anchor_bottom = 0.1
text = "X"

[node name="CookingEffect" type="ColorRect" parent="Background"]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -50
margin_top = -50
margin_right = 50
margin_bottom = 50
color = Color(1, 0.843137, 0, 0.5)

[node name="ResultLabel" type="Label" parent="Background"]
anchor_left = 0.5
anchor_top = 0.92
anchor_right = 0.95
anchor_bottom = 0.98
align = 1
valign = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="Background"]
anims/cooking = SubResource( 2 )

[connection signal="item_selected" from="Background/RecipeList" to="." method="_on_recipe_selected"]
[connection signal="pressed" from="Background/CloseButton" to="." method="_on_close_button_pressed"]